# pkg/api/docs/swagger.yaml
@@ -19,22 +19,7 @@ definitions:
       username:
         type: string
     type: object
-  CreateWorkspaceRequest:
-    properties:
-      id:
-        type: string
-      name:
-        type: string
-      projects:
-        items:
-          $ref: '#/definitions/CreateWorkspaceRequestProject'
-        type: array
-      target:
-        type: string
-    required:
-    - projects
-    type: object
-  CreateWorkspaceRequestProject:
+  CreateProjectConfigDTO:
     properties:
       build:
         $ref: '#/definitions/ProjectBuild'
@@ -47,16 +32,45 @@ definitions:
       name:
         type: string
       source:
-        $ref: '#/definitions/CreateWorkspaceRequestProjectSource'
+        $ref: '#/definitions/CreateProjectConfigSourceDTO'
       user:
         type: string
-    required:
-    - name
     type: object
-  CreateWorkspaceRequestProjectSource:
+  CreateProjectConfigSourceDTO:
     properties:
       repository:
         $ref: '#/definitions/GitRepository'
+    type: object
+  CreateProjectDTO:
+    properties:
+      existingProjectConfig:
+        $ref: '#/definitions/ExistingProjectConfigDTO'
+      newProjectConfig:
+        $ref: '#/definitions/CreateProjectConfigDTO'
+    type: object
+  CreateWorkspaceDTO:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      projects:
+        items:
+          $ref: '#/definitions/CreateProjectDTO'
+        type: array
+      target:
+        type: string
+    required:
+    - projects
+    type: object
+  ExistingProjectConfigDTO:
+    properties:
+      branch:
+        type: string
+      configName:
+        type: string
+      projectName:
+        type: string
     type: object
   FRPSConfig:
     properties:
@@ -186,6 +200,8 @@ definitions:
     properties:
       build:
         $ref: '#/definitions/ProjectBuild'
+      default:
+        type: boolean
       image:
         type: string
       name:
@@ -209,6 +225,21 @@ definitions:
   ProjectBuildDevcontainer:
     properties:
       devContainerFilePath:
+        type: string
+    type: object
+  ProjectConfig:
+    properties:
+      build:
+        $ref: '#/definitions/ProjectBuild'
+      default:
+        type: boolean
+      image:
+        type: string
+      name:
+        type: string
+      repository:
+        $ref: '#/definitions/GitRepository'
+      user:
         type: string
     type: object
   ProjectInfo:
@@ -769,6 +800,26 @@ paths:
       summary: Get Git provider
       tags:
       - gitProvider
+  /gitprovider/id-for-url/{url}:
+    get:
+      description: Get Git provider ID
+      operationId: GetGitProviderIdForUrl
+      parameters:
+      - description: Url
+        in: path
+        name: url
+        required: true
+        type: string
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Get Git provider ID
+      tags:
+      - gitProvider
   /profile:
     delete:
       description: Delete profile data
@@ -810,6 +861,95 @@ paths:
       summary: Set profile data
       tags:
       - profile
+  /project-config:
+    get:
+      description: List project configs
+      operationId: ListProjectConfigs
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/ProjectConfig'
+            type: array
+      summary: List project configs
+      tags:
+      - project-config
+    put:
+      consumes:
+      - application/json
+      description: Set project config data
+      operationId: SetProjectConfig
+      parameters:
+      - description: Project config
+        in: body
+        name: projectConfig
+        required: true
+        schema:
+          $ref: '#/definitions/CreateProjectConfigDTO'
+      responses:
+        "201":
+          description: Created
+      summary: Set project config data
+      tags:
+      - project-config
+  /project-config/{configName}:
+    delete:
+      description: Delete project config data
+      operationId: DeleteProjectConfig
+      parameters:
+      - description: Config name
+        in: path
+        name: configName
+        required: true
+        type: string
+      responses:
+        "204":
+          description: No Content
+      summary: Delete project config data
+      tags:
+      - project-config
+    get:
+      consumes:
+      - application/json
+      description: Get project config data
+      operationId: GetProjectConfig
+      parameters:
+      - description: Config name
+        in: path
+        name: configName
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ProjectConfig'
+      summary: Get project config data
+      tags:
+      - project-config
+  /project-config/default/{gitUrl}:
+    get:
+      description: Get project configs by git url
+      operationId: GetDefaultProjectConfig
+      parameters:
+      - description: Git URL
+        in: path
+        name: gitUrl
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ProjectConfig'
+      summary: Get project configs by git url
+      tags:
+      - project-config
   /provider:
     get:
       description: List providers
@@ -1009,7 +1149,7 @@ paths:
         name: workspace
         required: true
         schema:
-          $ref: '#/definitions/CreateWorkspaceRequest'
+          $ref: '#/definitions/CreateWorkspaceDTO'
       produces:
       - application/json
       responses:
