# pkg/cmd/server/serve.go
@@ -31,6 +31,7 @@ import (
 	"github.com/daytonaio/daytona/pkg/server/gitproviders"
 	"github.com/daytonaio/daytona/pkg/server/headscale"
 	"github.com/daytonaio/daytona/pkg/server/profiledata"
+	"github.com/daytonaio/daytona/pkg/server/projectconfig"
 	"github.com/daytonaio/daytona/pkg/server/providertargets"
 	"github.com/daytonaio/daytona/pkg/server/registry"
 	"github.com/daytonaio/daytona/pkg/server/workspaces"
@@ -100,6 +101,10 @@ var ServeCmd = &cobra.Command{
 		if err != nil {
 			log.Fatal(err)
 		}
+		projectConfigStore, err := db.NewProjectConfigStore(dbConnection)
+		if err != nil {
+			log.Fatal(err)
+		}
 		gitProviderConfigStore, err := db.NewGitProviderConfigStore(dbConnection)
 		if err != nil {
 			log.Fatal(err)
@@ -134,6 +139,10 @@ var ServeCmd = &cobra.Command{
 
 		containerRegistryService := containerregistries.NewContainerRegistryService(containerregistries.ContainerRegistryServiceConfig{
 			Store: containerRegistryStore,
+		})
+
+		projectConfigService := projectconfig.NewProjectConfigService(projectconfig.ProjectConfigServiceConfig{
+			ConfigStore: projectConfigStore,
 		})
 
 		var localContainerRegistry server.ILocalContainerRegistry
@@ -223,6 +232,7 @@ var ServeCmd = &cobra.Command{
 			ApiKeyService:            apiKeyService,
 			GitProviderService:       gitProviderService,
 			ContainerRegistryService: containerRegistryService,
+			ProjectConfigService:     projectConfigService,
 			ServerApiUrl:             util.GetFrpcApiUrl(c.Frps.Protocol, c.Id, c.Frps.Domain),
 			ServerUrl:                headscaleUrl,
 			DefaultProjectImage:      c.DefaultProjectImage,
@@ -241,6 +251,7 @@ var ServeCmd = &cobra.Command{
 			TailscaleServer:          headscaleServer,
 			ProviderTargetService:    providerTargetService,
 			ContainerRegistryService: containerRegistryService,
+			ProjectConfigService:     projectConfigService,
 			LocalContainerRegistry:   localContainerRegistry,
 			ApiKeyService:            apiKeyService,
 			WorkspaceService:         workspaceService,
